syntax = "proto3";

message BasicRequestInfo {
    string type = 1;    // sync/async
    bool use_sandbox = 2;   // true/false 
    string response_topic = 3;  // topic to response
}